# MinCompSpin

./: .buildinfo  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  genindex.html  index.html  install.sh  objects.inv  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/api/: basis.doctree  basis_search.doctree  data.doctree  index.doctree  mcm.doctree  mcm_search.doctree  mcmpy.doctree
.doctrees/examples/: index.doctree  supreme_court_best_basis.doctree  supreme_court_original_basis.doctree
.doctrees/nbsphinx/examples/: supreme_court_original_basis.ipynb
.doctrees/user_guide/: index.doctree  installation.doctree
.github/workflows/: ci.yml  documentation.yml
_modules/: index.html
_sources/api/: basis.rst.txt  data.rst.txt  index.rst.txt  mcm.rst.txt  mcm_search.rst.txt  mcmpy.rst.txt
_sources/examples/: index.rst.txt
_sources/user_guide/: installation.rst.txt
api/: basis.html  basis_search.html  data.html  index.html  mcm.html  mcm_search.html  mcmpy.html
docs/: conf.py  index.rst
docs/api/: basis_search.rst  data.rst  mcmpy.rst
docs/examples/: supreme_court_best_basis.ipynb
examples/: index.html  supreme_court_best_basis.html  supreme_court_original_basis.html
include/basis/: basis.h  independence.h
include/data/: data_processing.h  dataset.h
include/model/: mcm.h  model.h
include/search/: div_and_conq.h  exhaustive.h  search.h
include/search/basis_search/: basis_search.h
include/search/mcm_search/: annealing.h  div_and_conq.h  exhaustive.h  mcm_search.h
include/utilities/: histogram.h  miscellaneous.h  partition.h  spin_ops.h
mcmpy/: CMakeLists.txt  __init__.py.in  setup.py.in
mcmpy/include/: py_basis.h  py_basis_search.h  py_dataset.h  py_mcm.h  py_mcm_search.h
mcmpy/src/: CMakeLists.txt  bindings.cpp  py_basis.cpp  py_basis_search.cpp  py_dataset.cpp  py_mcm.cpp  py_mcm_search.cpp  py_partition.cpp
mcmpy/tests/: conftest.py  test_basis.py  test_basis_search.py  test_data.py  test_mcm.py  test_mcm_search.py
pybinds/: CMakeLists.txt  tutorial.ipynb
pybinds/include/: py_basis.h  py_dataset.h  py_mcm.h  py_model.h  py_partition.h  py_search.h
pybinds/src/: CMakeLists.txt  bindings.cpp  py_basis.cpp  py_dataset.cpp  py_mcm.cpp  py_model.cpp  py_partition.cpp  py_search.cpp
src/: CMakeLists.txt
src/basis/: CMakeLists.txt  basis.cpp  gauge_transform.cpp  independence.cpp
src/data/: CMakeLists.txt  complexity.cpp  data_processing.cpp  dataset.cpp  evidence.cpp  likelihood.cpp
src/model/: CMakeLists.txt  mcm.cpp  model.cpp
src/search/: CMakeLists.txt  annealing.cpp  div_and_conq.cpp  exhaustive.cpp  greedy.cpp  search.cpp
src/search/basis_search/: CMakeLists.txt  basis_search.cpp
src/search/mcm_search/: CMakeLists.txt  annealing.cpp  div_and_conq.cpp  exhaustive.cpp  greedy.cpp  mcm_search.cpp
src/utilities/: CMakeLists.txt  histogram.cpp  miscellaneous.cpp  partition.cpp  spin_ops.cpp
tests/: CMakeLists.txt
tests/basis/: basis.cpp  gauge_transform.cpp  independence.cpp
tests/data/: dataset.cpp  evidence.cpp  processing.cpp
tests/model/: mcm.cpp  model.cpp
tests/search/: basis_search.cpp  mcm_search.cpp  search.cpp
tests/utilities/: histogram.cpp  spin_ops.cpp
user_guide/: index.html  installation.html
